fix hover flickering

--- a/cards.css
+++ b/cards.css
@@ -53,7 +53,7 @@
   transform: rotateY(180deg);
 }
 
-.card:hover {
+.card-wrapper:hover .card {
   transform: rotateY(180deg);
 }
 
